Fixed critical UI issue where cards were added to columns and not ULs. Added ability to select a board, add a board, display cards for each board, and add a card.

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -175,15 +175,64 @@ $BOARD-WIDTH: calc(100% - #{$MYBOARDS_WIDTH});
     border: 0px;
     cursor: pointer;
     transition: opacity 200ms ease-in;
+    margin: 4px 2px;
 }
 
 .board-delete-btn:hover {
     opacity: 1;
     transition: opacity 200ms ease-in;
+    margin: 4px 2px;
 }
 
 .board-delete-btn:focus {
     outline: 0px;
+    margin: 4px 2px;
+}
+
+.board-add-column-btn {
+    background-color: $gray-light;
+    color: $white;
+    opacity: .8;
+    padding: 10px 10px;
+    margin: 0px;
+    border: 0px;
+    cursor: pointer;
+    transition: opacity 200ms ease-in;
+    margin: 4px 2px;
+}
+
+.board-add-column-btn {
+    opacity: 1;
+    transition: opacity 200ms ease-in;
+    margin: 4px 2px;
+}
+
+.board-add-column-btn:focus {
+    outline: 0px;
+    margin: 4px 2px;
+}
+
+.board-remove-column-btn {
+    background-color: $gray-light;
+    color: $white;
+    opacity: .8;
+    padding: 10px 10px;
+    margin: 0px;
+    border: 0px;
+    cursor: pointer;
+    transition: opacity 200ms ease-in;
+    margin: 4px 2px;
+}
+
+.board-remove-column-btn {
+    opacity: 1;
+    transition: opacity 200ms ease-in;
+    margin: 4px 2px;
+}
+
+.board-remove-column-btn:focus {
+    outline: 0px;
+    margin: 4px 2px;
 }
 
 .board-title {
