Discovered duplicate event bug when column is renamed. Attempted to fix unsuccessfully. Merging factored code.

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -397,6 +397,11 @@ $BOARD-WIDTH: calc(100% - #{$MYBOARDS_WIDTH});
     padding: 0;
 }
 
+.edit-column-title {
+  background-color: rgba(0, 0, 0, .25);
+  color: $white;
+}
+
 .card-el {
     width: 100%;
     height: auto;
